// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uploads any 1`] = `
{
  "Дмитрий": "дмитрий",
  "Лев.р": "лев.р",
  "どうもありがとうミスターロボット.txt": "どうもありがとうミスターロボット.txt",
  "你好，世界": "你好，世界",
  "你好，世界.世界": "你好，世界.世界",
  "全国温泉ガイド.jp": "全国温泉ガイド.jp",
}
`;

exports[`uploads english 1`] = `
{
  ".gitignore": ".gitignore",
  ".travis.yml": ".travis.yml",
  "LICENSE": "license",
  "PËRSH- - - ENDETJE  BOTË": "persh-endetje-bote",
  "PËRSHENDETJE BOTË": "pershendetje-bote",
  "Përshendetje Botë": "pershendetje-bote",
  "Selam Dünya.jpg": "selam-dunya.jpg",
  "ai.ai": "ai.ai",
  "apng.png": "apng.png",
  "beça": "beca",
  "bmp.bmp": "bmp.bmp",
  "build.js": "build.js",
  "build.js.map": "build.js.map",
  "css.css": "css.css",
  "csv.csv": "csv.csv",
  "docs.js": "docs.js",
  "docs.jsx": "docs.jsx",
  "docx.docx": "docx.docx",
  "dwg.dwg": "dwg.dwg",
  "dxf.dxf": "dxf.dxf",
  "emf.emf": "emf.emf",
  "epub.epub": "epub.epub",
  "font.otf": "font.otf",
  "font.ttf": "font.ttf",
  "font.woff": "font.woff",
  "font.woff2": "font.woff2",
  "gif-w-alpha.gif": "gif-w-alpha.gif",
  "gif.gif": "gif.gif",
  "jpg.jpg": "jpg.jpg",
  "json.json": "json.json",
  "less.less": "less.less",
  "lock.lock": "lock.lock",
  "md.md": "md.md",
  "mp4.mp4": "mp4.mp4",
  "niño.yo": "nino.yo",
  "ods.ods": "ods.ods",
  "odt.odt": "odt.odt",
  "pct.pct": "pct.pct",
  "pdf.pdf": "pdf.pdf",
  "png-w-alpha.png": "png-w-alpha.png",
  "psd.psd": "psd.psd",
  "scss.scss": "scss.scss",
  "shellscript": "shellscript",
  "sql.sql": "sql.sql",
  "svg-with-alpha-and-text.svg": "svg-with-alpha-and-text.svg",
  "svg.svg": "svg.svg",
  "svgo.yaml": "svgo.yaml",
  "swf.swf": "swf.swf",
  "tga.tga": "tga.tga",
  "tif.tif": "tif.tif",
  "todo-0.1.0.tgz": "todo-0.1.0.tgz",
  "tsv.tsv": "tsv.tsv",
  "txt.txt": "txt.txt",
  "typescript.ts": "typescript.ts",
  "typescript.tsx": "typescript.tsx",
  "wmf.wmf": "wmf.wmf",
  "xlsx.xlsx": "xlsx.xlsx",
  "zip.zip": "zip.zip",
  "Салом Ҷаҳон.gif": "салом-ҷаҳон.gif",
}
`;

exports[`uploads upper 1`] = `
{
  ".gitignore": ".gitignore",
  ".travis.yml": ".travis.yml",
  "LICENSE": "LICENSE",
  "PËRSH- - - ENDETJE  BOTË": "PERSH-ENDETJE-BOTE",
  "PËRSHENDETJE BOTË": "PERSHENDETJE-BOTE",
  "Përshendetje Botë": "Pershendetje-Bote",
  "Selam Dünya.jpg": "Selam-Dunya.jpg",
  "ai.ai": "ai.ai",
  "apng.png": "apng.png",
  "beça": "beca",
  "bmp.bmp": "bmp.bmp",
  "build.js": "build.js",
  "build.js.map": "build.js.map",
  "css.css": "css.css",
  "csv.csv": "csv.csv",
  "docs.js": "docs.js",
  "docs.jsx": "docs.jsx",
  "docx.docx": "docx.docx",
  "dwg.dwg": "dwg.dwg",
  "dxf.dxf": "dxf.dxf",
  "emf.emf": "emf.emf",
  "epub.epub": "epub.epub",
  "font.otf": "font.otf",
  "font.ttf": "font.ttf",
  "font.woff": "font.woff",
  "font.woff2": "font.woff2",
  "gif-w-alpha.gif": "gif-w-alpha.gif",
  "gif.gif": "gif.gif",
  "jpg.jpg": "jpg.jpg",
  "json.json": "json.json",
  "less.less": "less.less",
  "lock.lock": "lock.lock",
  "md.md": "md.md",
  "mp4.mp4": "mp4.mp4",
  "niño.yo": "nino.yo",
  "ods.ods": "ods.ods",
  "odt.odt": "odt.odt",
  "pct.pct": "pct.pct",
  "pdf.pdf": "pdf.pdf",
  "png-w-alpha.png": "png-w-alpha.png",
  "psd.psd": "psd.psd",
  "scss.scss": "scss.scss",
  "shellscript": "shellscript",
  "sql.sql": "sql.sql",
  "svg-with-alpha-and-text.svg": "svg-with-alpha-and-text.svg",
  "svg.svg": "svg.svg",
  "svgo.yaml": "svgo.yaml",
  "swf.swf": "swf.swf",
  "tga.tga": "tga.tga",
  "tif.tif": "tif.tif",
  "todo-0.1.0.tgz": "todo-0.1.0.tgz",
  "tsv.tsv": "tsv.tsv",
  "txt.txt": "txt.txt",
  "typescript.ts": "typescript.ts",
  "typescript.tsx": "typescript.tsx",
  "wmf.wmf": "wmf.wmf",
  "xlsx.xlsx": "xlsx.xlsx",
  "zip.zip": "zip.zip",
  "Салом Ҷаҳон.gif": "Салом-Ҷаҳон.gif",
}
`;
